--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -17,13 +17,13 @@ h14 {
   margin-right: 20px;
 }
 
-.termsAlphanum{
-    width: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
+.termsAlphanum {
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 .inputSearch {
@@ -34,7 +34,7 @@ h14 {
   border: 1px solid #c4c4c4;
   box-shadow: chocolate;
   box-shadow: 1px 1px 4px 0px #e9e9e9;
-  text-overflow:clip;
+  text-overflow: clip;
 }
 
 .filterTermsContainer {
@@ -61,47 +61,48 @@ li {
   cursor: pointer;
 }
 ul {
-  padding-left: 40px;
+  padding-left: 20px;
 }
-
+ul div {
+  margin-bottom: 10px;
+}
 .divFilter {
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 30px;
-  width: 250px;
+  width: 350px;
 }
 
-.IdForm2{
-    background: white;
-    border: 2px solid rgba(12, 16, 64, 0.606);
-    margin: 4px;
-    padding: 6px;
-    box-shadow: 1px 1px 2px #a3a0a0;
-    width: 168px;
-    height: 20px;
-    border-radius: 4px;
-    overflow: auto;
+.IdForm2 {
+  background: white;
+  border: 2px solid rgba(12, 16, 64, 0.606);
+  margin: 4px;
+  padding: 6px;
+  box-shadow: 1px 1px 2px #a3a0a0;
+  width: 168px;
+  height: 20px;
+  border-radius: 4px;
+  overflow: auto;
 }
 
 .ValueForm2 {
-    background: white;
-    border: 2px solid rgba(12, 16, 64, 0.606);
-    margin-left: 5px;
-    padding: 6px;
-    box-shadow: 1px 1px 2px #a3a0a0;
-    width: 30%;
-    height: 20px;
-    border-radius: 4px;
+  background: white;
+  border: 2px solid rgba(12, 16, 64, 0.606);
+  margin-left: 5px;
+  padding: 6px;
+  box-shadow: 1px 1px 2px #a3a0a0;
+  width: 30%;
+  height: 20px;
+  border-radius: 4px;
 }
 
-
 .selectedOperator2 {
-    background: white;
-    border: 2px solid rgba(12, 16, 64, 0.606);
-    font-size: medium;
-    border-radius: 4px;
-    width: 43px;
-    height: 34px;
-    margin-right: 20px;
-    box-shadow: 1px 2px 2px #cecece;
+  background: white;
+  border: 2px solid rgba(12, 16, 64, 0.606);
+  font-size: medium;
+  border-radius: 4px;
+  width: 43px;
+  height: 34px;
+  margin-right: 20px;
+  box-shadow: 1px 2px 2px #cecece;
 }
