--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -3,7 +3,8 @@
   width: 100vw;
   align-items: center;
   justify-content: center;
-  margin-bottom: 70px;
+  margin-bottom: 40px;
+  margin-top: -80px;
 }
 
 .formInput {
@@ -15,6 +16,30 @@ h14 {
   font-size: 16px;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.moduleAddedVariant h4{
+  font-size: 12px;
+    color: rgba(12, 16, 64, 0.606);
+    margin-left: 10px;
+    margin-top: 6px;
+}
+
+.moduleAddedVariant2 h4{
+  font-size: 12px;
+    color: rgba(12, 16, 64, 0.606);
+    margin-left: 10px;
+    margin-top: 6px;
+}
+
+
+p {
+  font-size: 15px !important;
+  color: #2a6169;
+}
+
+.tittleVariant{
+  color: rgb(125, 125, 141);
 }
 
 .termsAlphanum {
@@ -39,8 +64,8 @@ h14 {
 
 .filterTermsContainer {
   display: flex;
-  width: 90vw;
-  justify-content: center;
+  width: 95vw;
+  justify-content: space-evenly;
   margin-bottom: 18px;
   flex-wrap: wrap;
   margin-left: 53px;
@@ -54,37 +79,104 @@ p {
   margin-left: 6px;
   padding: 0px;
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
-.textAreaDiv{
-    display: flex;
-    flex-direction: column-reverse;
-    align-content: space-between;
-    /* justify-content: space-around; */
-    align-items: flex-end;
+.textAreaDiv {
+  display: flex;
+  flex-direction: column-reverse;
+  align-content: space-between;
+  /* justify-content: space-around; */
+  align-items: flex-end;
 }
 
+.moduleAddedVariant2 h2 {
+  width: fit-content;
+  color: rgb(99 134 169);
+  font-weight: 500;
+}
+
+.moduleAddedVariant h2 {
+  width: fit-content;
+  color: rgb(99 134 169);
+  font-weight: 500;
+}
+
+.moduleAddedVariant {
+  display: flex;
+  flex-direction: column;
+  width: 132px;
+  justify-content: center;
+  border: 0px solid #f2eded;
+  /* padding: 11px; */
+  padding-left: 22px;
+  padding-bottom: 8px;
+  margin-top: -10px;
+  border-radius: 15px;
+  padding-right: -7px;
+  /* margin-top: 11px; */
+  margin-bottom: 45px;
+  box-shadow: rgba(192, 200, 227, 0.27) 0px 0px 0.25em,
+    rgba(159, 167, 184, 0.05) 0px 0.25em 1em;
+  margin-left: 58vw;
+  animation: slide-in-blurred-right 0.4s ease-in both;
+}
+.moduleAddedVariant2 {
+  display: flex;
+  flex-direction: column;
+  width: 132px;
+  justify-content: center;
+  border: 0px solid #f2eded;
+  /* padding: 11px; */
+  padding-left: 22px;
+  padding-bottom: 8px;
+  margin-top: -10px;
+  border-radius: 15px;
+  padding-right: -7px;
+  /* margin-top: 11px; */
+  margin-bottom: 45px;
+  box-shadow: rgba(192, 200, 227, 0.27) 0px 0px 0.25em,
+    rgba(159, 167, 184, 0.05) 0px 0.25em 1em;
+  animation: slide-in-blurred-right 0.4s ease-in both;
+}
+
+.containerModulesVariants {
+  display: flex;
+  display: flex;
+  align-content: space-around;
+  justify-content: flex-end;
+  margin-right: 30vw;
+}
+
+.divHisto {
+  display: flex;
+}
 li {
   font-size: 15px;
   margin-bottom: 10px;
   cursor: pointer;
 }
 ul {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 ul div {
-    margin-bottom: 10px;
-    display: flex;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: flex-start;
+  margin-left: 4px;
 }
 
-label{
-    margin-left: 6px;
+label {
+  margin-left: 6px;
 }
 
-.ageButton{
-    font-size: 14px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+.ageButton {
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 .divFilter {
   margin-right: 10px;
@@ -93,20 +185,20 @@ label{
   width: 350px;
 }
 
-.resetButton{
-  background-color: rgb(235, 235, 244);
+.resetButton {
+  background-color: rgb(249, 249, 249);
   border: 1px solid rgb(169, 169, 216);
   border-radius: 2px;
   margin-bottom: 3px;
   cursor: pointer;
 }
 
-.resetButton:hover{
+.resetButton:hover {
   background-color: rgb(232, 248, 255);
 }
 
-#subscribeNews{
-    accent-color: #4480bd;
+#subscribeNews {
+  accent-color: #4480bd;
 }
 
 .divFilter2 {
@@ -118,7 +210,7 @@ label{
 .divFilter3 {
   margin-right: 32px;
   margin-bottom: 30px;
-  width: 200px;
+  width: 290px;
 }
 .divFilter4 {
   margin-right: 32px;
@@ -126,12 +218,23 @@ label{
   width: 150px;
 }
 
-.formula{
-    width: 20px;
+.divFilter5 {
+  margin-right: 32px;
+  margin-bottom: 30px;
+  width: 539px;
 }
 
-.dictionary{
-    width: 20px;
+.mutationDiv {
+  display: flex;
+  flex-direction: column;
+}
+
+.formula {
+  width: 20px;
+}
+
+.dictionary {
+  width: 20px;
 }
 
 .IdForm2 {
@@ -170,4 +273,74 @@ label{
 
 .selectModule1 {
   width: 250px !important;
+}
+
+@media (max-width: 1200px) {
+  .inputSearch {
+    width: 28vw;
+    height: fit-content;
+    padding: 10px;
+    font-size: 14 px;
+    border: 1px solid #c4c4c4;
+    box-shadow: chocolate;
+    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    text-overflow: clip;
+  }
+  .containerSelection {
+    display: flex;
+    width: 90vw;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    margin-top: -80px;
+  }
+}
+
+@media (max-width: 950px) {
+  .inputSearch {
+    width: 28vw;
+    height: fit-content;
+    padding: 10px;
+    font-size: 14 px;
+    border: 1px solid #c4c4c4;
+    box-shadow: chocolate;
+    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    text-overflow: clip;
+  }
+  .containerSelection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    margin-top: -80px;
+  }
+
+  .selectModule1 {
+    width: 150px !important;
+  }
+}
+
+@media (max-width: 900px) {
+  .inputSearch {
+    width: 28vw;
+    height: fit-content;
+    padding: 10px;
+    font-size: 14 px;
+    border: 1px solid #c4c4c4;
+    box-shadow: chocolate;
+    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    text-overflow: clip;
+  }
+  .containerSelection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    margin-top: 20px;
+    width: 100vw;
+  }
+
+  .selectModule1 {
+    width: 150px !important;
+  }
 }
