--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -434,12 +434,14 @@ h14 {
 }
 
 .inputVariants {
-  height: 24px;
+  width: 69px;
+  /* height: 24px; */
   border: 0.5px solid #dfdfdf;
   border-radius: 2px;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
+  margin-left: 6px;
   font-size: 11.5px;
-  padding: 5px;
+  padding: 3px;
   box-shadow: rgb(234 221 221 / 16%) 0px 1px 4px;
 }
 
@@ -1486,11 +1488,15 @@ h5 {
   }
 
   .inputVariants {
-    height: 24px;
-    border: 1.5px solid #dfdfdf;
+    width: 69px;
+    /* height: 24px; */
+    border: 0.5px solid #dfdfdf;
     border-radius: 2px;
-    margin-bottom: 10px;
-    font-size: 12px;
+    margin-bottom: 2px;
+    margin-left: 6px;
+    font-size: 11.5px;
+    padding: 3px;
+    box-shadow: rgb(234 221 221 / 16%) 0px 1px 4px;
   }
 
   .container2 {
@@ -1804,11 +1810,15 @@ h5 {
   }
 
   .inputVariants {
-    height: 24px;
-    border: 1.5px solid #dfdfdf;
+    width: 69px;
+    /* height: 24px; */
+    border: 0.5px solid #dfdfdf;
     border-radius: 2px;
-    margin-bottom: 30px;
-    font-size: 12px;
+    margin-bottom: 2px;
+    margin-left: 6px;
+    font-size: 11.5px;
+    padding: 3px;
+    box-shadow: rgb(234 221 221 / 16%) 0px 1px 4px;
   }
 
   .container2 {
