--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -2,6 +2,138 @@
   background-color: rgb(168 206 221);
 }
 
+/* Apply custom scrollbar styles to the table container */
+.table-container {
+  overflow-x: auto;
+  width: 100vw;
+  height: 90vh;
+  position: relative;
+  display: flex;
+
+  flex-direction: column;
+  scrollbar-width: thin; /* For Firefox */
+
+  scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0); /* For Firefox */
+}
+
+.table-container th.hidden,
+.table-container td.hidden {
+  display: none;
+}
+
+.menu-icon-container {
+  display: flex;
+  justify-content: flex-end;
+}
+.menu-container {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  background: #e7e9f2;
+  border-radius: 14px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin-bottom: 5px;
+}
+.column-list li {
+  margin: 5px;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 11.5px;
+}
+
+li svg {
+  margin-left: 7px;
+}
+.sticky-header input {
+  border: 1px solid #e0eaf9;
+  padding: 4px;
+  margin-top: 2px;
+  margin-bottom: -4px;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
+/* Customize the scrollbar track */
+.table-container::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1); /* Lighter background color */
+}
+
+/* Customize the scrollbar thumb */
+.table-container::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5); /* Darker thumb color */
+  border-radius: 10px; /* Rounded corners */
+}
+
+/* Customize the scrollbar corner */
+.table-container::-webkit-scrollbar-corner {
+  background-color: transparent; /* Hide the scrollbar corner */
+}
+
+.header-container {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+}
+
+.body-container {
+  overflow-y: auto;
+  max-height: 100vh;
+}
+
+.table {
+  width: 96%;
+  border-collapse: collapse;
+  table-layout: fixed; /* Fixed layout to ensure equal column widths */
+  margin-left: 14px;
+}
+
+thead {
+  border-bottom: solid 1px #e1e1e1;
+  background-color: white;
+}
+
+th,
+td {
+  padding: 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+  white-space: break-spaces;
+  width: 23vw;
+  overflow-x: scroll;
+  height: 104px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: sans-serif;
+}
+
+th.sticky-header {
+  position: sticky;
+  top: 0;
+  background-color: white; /* Ensure background color appears */
+  z-index: 3; /* Ensure the sticky header appears above the tbody */
+  height: 60px;
+}
+
+th {
+  font-size: 13px;
+}
+
+td {
+  font-size: 12px;
+}
+
+/* Calculate and set equal column widths */
+
 .pre {
   display: 'block';
   padding: '10px 30px';
@@ -17,14 +149,14 @@
   color: #5c5cb5;
 }
 
-.buttonId{
+.buttonId {
   text-decoration: underline;
   text-underline-offset: 2px;
   color: rgb(60, 60, 249);
   margin-top: 10px;
 }
 
-.buttonId:hover{
+.buttonId:hover {
   color: #a498f3;
 }
 
@@ -57,10 +189,10 @@
   background: #e93e3e;
 }
 
-.foundResult:hover{
+.foundResult:hover {
   color: white;
 }
-.NotfoundResult:hover{
+.NotfoundResult:hover {
   color: white;
 }
 
@@ -224,8 +356,8 @@ h1 {
 }
 
 .css-6h1dhi-MuiDataGrid-root .MuiDataGrid-cell--textLeft {
-display: flex;
-align-items: start !important;
+  display: flex;
+  align-items: start !important;
 }
 
 .MuiDataGrid-root {
