--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -37,7 +37,9 @@
   padding-right: 8px;
   padding-top: 3px;
   padding-bottom: 3px;
+  height: fit-content;
   margin-bottom: 5px;
+  cursor: pointer;
 }
 .column-list li {
   margin: 5px;
@@ -46,6 +48,14 @@
   align-items: center;
   justify-content: center;
   font-size: 11.5px;
+}
+
+.export-menu{
+  margin-right: 3px;
+}
+
+.exportButton svg{
+  font-size: 16px;
 }
 
 li svg {
@@ -58,6 +68,27 @@ li svg {
   margin-bottom: -4px;
   border-radius: 4px;
   font-size: 12px;
+}
+.column-list{
+  margin-top: -1px;
+}
+.export-menu{
+  height: fit-content;
+    background: #e7e9f2;
+    border-radius: 14px;
+    /* padding-left: 8px; */
+    /* padding-right: 8px; */
+    margin-bottom: 5px;
+    display: flex;
+    padding-top: 2px;
+    padding-bottom: 0px;
+    /* padding-bottom: 3px; */
+    /* justify-content: flex-start; */
+    flex-direction: column;
+    align-content: stretch;
+    align-items: flex-end;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
 /* Customize the scrollbar track */
