--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -9,7 +9,7 @@
   height: 90vh;
   position: relative;
   display: flex;
-
+  min-width: 950px;
   flex-direction: column;
   scrollbar-width: thin; /* For Firefox */
 
@@ -50,11 +50,15 @@
   font-size: 11.5px;
 }
 
-.export-menu{
+.column-list li:hover {
+  color: #5c5cb5;
+}
+
+.export-menu {
   margin-right: 3px;
 }
 
-.exportButton svg{
+.exportButton svg {
   font-size: 16px;
 }
 
@@ -69,26 +73,26 @@ li svg {
   border-radius: 4px;
   font-size: 12px;
 }
-.column-list{
+.column-list {
   margin-top: -1px;
 }
-.export-menu{
+.export-menu {
   height: fit-content;
-    background: #e7e9f2;
-    border-radius: 14px;
-    /* padding-left: 8px; */
-    /* padding-right: 8px; */
-    margin-bottom: 5px;
-    display: flex;
-    padding-top: 2px;
-    padding-bottom: 0px;
-    /* padding-bottom: 3px; */
-    /* justify-content: flex-start; */
-    flex-direction: column;
-    align-content: stretch;
-    align-items: flex-end;
-    padding-left: 2px;
-    padding-right: 2px;
+  background: #e7e9f2;
+  border-radius: 14px;
+  /* padding-left: 8px; */
+  /* padding-right: 8px; */
+  margin-bottom: 5px;
+  display: flex;
+  padding-top: 2px;
+  padding-bottom: 0px;
+  /* padding-bottom: 3px; */
+  /* justify-content: flex-start; */
+  flex-direction: column;
+  align-content: stretch;
+  align-items: flex-end;
+  padding-left: 2px;
+  padding-right: 2px;
 }
 
 /* Customize the scrollbar track */
@@ -119,20 +123,23 @@ li svg {
   max-height: 100vh;
 }
 
-.table {
+.tableResults {
   width: 96%;
   border-collapse: collapse;
   table-layout: fixed; /* Fixed layout to ensure equal column widths */
   margin-left: 14px;
 }
 
-thead {
+.theadResults {
   border-bottom: solid 1px #e1e1e1;
-  background-color: white;
+  background-color: #a9c9bb;
 }
 
-th,
-td {
+.sticky-header input {
+  width: 80%;
+}
+.sticky-header,
+.visible {
   padding: 8px;
   border: 1px solid #ddd;
   text-align: left;
@@ -152,7 +159,6 @@ th.sticky-header {
   top: 0;
   background-color: white; /* Ensure background color appears */
   z-index: 3; /* Ensure the sticky header appears above the tbody */
-  height: 60px;
 }
 
 th {
@@ -164,21 +170,6 @@ td {
 }
 
 /* Calculate and set equal column widths */
-
-.pre {
-  display: 'block';
-  padding: '10px 30px';
-  margin: '0';
-  overflow: 'scroll';
-  cursor: pointer;
-  overscroll-behavior: contain;
-  overflow-inline: scroll;
-}
-
-.MuiDataGrid-cell--withRenderer a {
-  text-decoration: underline;
-  color: #5c5cb5;
-}
 
 .buttonId {
   text-decoration: underline;
@@ -339,72 +330,12 @@ h1 {
   margin-bottom: 10px;
 }
 
-.MuiDataGrid-root {
-  margin-left: 70px;
-  margin-top: 5px;
-  width: 88vw;
-  margin-right: 5px;
-  overflow-inline: scroll;
-  height: 750px !important;
-  overflow: scroll;
-}
-
-.MuiDataGrid-root .MuiDataGrid-columnHeaderDraggableContainer {
-  width: fit-content !important;
-  height: 100%;
-}
-
-.MuiFormControl-root label {
-  visibility: hidden;
-  margin: 10px;
-  overflow: scroll;
-}
-
 .cardTableButton {
   display: flex;
   align-items: center;
   justify-content: center;
   align-content: center;
   width: 100vw;
-}
-
-.MuiDataGrid-cellContent {
-  display: flex;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: 40px;
-  white-space: pre;
-  overflow-y: scroll !important;
-  overflow-x: scroll !important;
-  height: 200px;
-  font-size: 12px;
-  text-overflow: clip !important;
-  overflow-inline: scroll;
-  overflow: scroll;
-  width: 350px;
-  align-content: flex-start !important;
-  align-items: flex-start !important;
-}
-
-.css-6h1dhi-MuiDataGrid-root .MuiDataGrid-cell--textLeft {
-  display: flex;
-  align-items: start !important;
-}
-
-.MuiDataGrid-root {
-  margin-left: 5px;
-  overflow: scroll;
-}
-
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 5px;
-  height: 3px;
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 2px;
-  background-color: rgba(223, 202, 202, 0.5);
-  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
 
 .containerBeaconResults {
@@ -439,7 +370,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 90vw;
+
     /* margin-right: 26px; */
     align-content: center;
     flex-wrap: wrap;
