--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -80,6 +80,7 @@ p {
   box-shadow: 1px 1px 4px 0px #e9e9e9;
   text-overflow: clip;
   line-height: 1.8;
+  max-width: 50vw;
 }
 
 .filterTermsContainer {
@@ -88,7 +89,7 @@ p {
   justify-content: space-evenly;
   margin-bottom: 18px;
   flex-wrap: wrap;
-  margin-left: 53px;
+  margin-left: -10px;
 }
 .filterTermsContainer2 {
   display: none;
@@ -201,17 +202,33 @@ ul {
   padding-left: 0px;
 }
 ul div {
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   display: flex;
   align-items: flex-start;
   margin-left: 4px;
+}
+
+.label-ontology-div2 input {
+  width: 80%;
+  margin-left: 3px;
+  border: 1px solid #a39fc5;
+  padding: 2px;
+  font-size: 12px;
+  border-radius: 4px;
+}
+
+.subTitle {
+  margin-bottom: 10px;
+  font-weight: 500;
 }
 
 label {
   margin-left: 6px;
 }
 
-.ageButton {
+.alphanumButton {
+  display: flex;
+  padding-left: 0px;
   font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -221,7 +238,10 @@ label {
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 30px;
-  width: 278px;
+  width: -moz-fit-content;
+  width: fit-content;
+  max-width: 200px;
+  min-width: 130px;
 }
 
 .resetButton {
@@ -240,6 +260,11 @@ label {
   accent-color: #4480bd;
 }
 
+.containerExamplesDiv2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
 .onHover {
   display: none;
 }
@@ -328,6 +353,7 @@ label {
 
 .formula {
   width: 20px;
+  margin-right: 12.5px;
 }
 
 .dictionary {
@@ -382,6 +408,7 @@ label {
     box-shadow: chocolate;
     box-shadow: 1px 1px 4px 0px #e9e9e9;
     text-overflow: clip;
+    max-width: 30vw;
   }
   .containerSelection {
     display: flex;
@@ -403,6 +430,7 @@ label {
     box-shadow: chocolate;
     box-shadow: 1px 1px 4px 0px #e9e9e9;
     text-overflow: clip;
+    max-width: 40vw;
   }
   .containerSelection {
     display: flex;
@@ -427,6 +455,7 @@ label {
     box-shadow: chocolate;
     box-shadow: 1px 1px 4px 0px #e9e9e9;
     text-overflow: clip;
+    max-width: 80vw;
   }
   .containerSelection {
     display: flex;
@@ -449,5 +478,29 @@ label {
 
   .selectModule1 {
     width: 150px !important;
+  }
+}
+
+@media (max-width: 350px) {
+  h14 {
+    color: #64646a;
+    font-size: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+    margin-bottom: -17px;
+  }
+  .inputSearch{
+    width: 28vw;
+    height: -moz-fit-content;
+    height: fit-content;
+    padding: 10px;
+    font-size: 14 px;
+    border: 1px solid #c4c4c4;
+    box-shadow: chocolate;
+    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    text-overflow: clip;
+    max-width: 69vw;
+    height: 20vh !important;
   }
 }
