--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -4,23 +4,29 @@
 
 /* Apply custom scrollbar styles to the table container */
 .table-container {
-  overflow-x: auto;
-  width: 100vw;
-  height: 90vh;
-  position: relative;
-  display: flex;
-  min-width: 950px;
-  flex-direction: column;
-  scrollbar-width: thin; /* For Firefox */
-
-  scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0); /* For Firefox */
+ 
+    overflow-x: auto;
+    width: 100%;
+    height: 90vh;
+    position: relative;
+    min-width: 1000px;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    display: flex;
+    /* min-width: 950px; */
+    flex-direction: column;
+    scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
 }
+
 
 .table-container th.hidden,
 .table-container td.hidden {
   display: none;
 }
 
+thead{
+  border-bottom: 0px !important;
+}
 .menu-icon-container {
   display: flex;
   justify-content: flex-end;
@@ -97,12 +103,12 @@ li svg {
 
 /* Customize the scrollbar track */
 .table-container::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1); /* Lighter background color */
+  scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
 }
 
 /* Customize the scrollbar thumb */
 .table-container::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.5); /* Darker thumb color */
+  scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
   border-radius: 10px; /* Rounded corners */
 }
 
@@ -130,10 +136,6 @@ li svg {
   margin-left: 14px;
 }
 
-.theadResults {
-  border-bottom: solid 1px #e1e1e1;
-  background-color: #a9c9bb;
-}
 
 .sticky-header input {
   width: 80%;
@@ -141,16 +143,15 @@ li svg {
 .sticky-header,
 .visible {
   padding: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #808cc9;
   text-align: left;
   white-space: break-spaces;
-  width: 23vw;
+  width: 86vw;
   overflow-x: scroll;
   height: 104px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
   font-family: sans-serif;
 }
 
@@ -344,7 +345,7 @@ h1 {
   justify-content: center;
   /* width: 98vw; */
   /* margin-right: 26px; */
-  align-content: center;
+  align-content: flex-start;
   flex-wrap: wrap;
   margin-left: 10px;
   margin-right: 10px;
@@ -365,14 +366,14 @@ h1 {
   justify-content: center;
 }
 
-@media (max-width: 860px) {
+@media (max-width: 1000px) {
   .containerBeaconResults {
     display: flex;
     flex-direction: column;
     justify-content: center;
 
     /* margin-right: 26px; */
-    align-content: center;
+    align-content: flex-start;
     flex-wrap: wrap;
     margin-left: 10px;
     margin-right: 10px;
