--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -199,8 +199,19 @@ li {
   cursor: pointer;
 }
 ul {
-  padding-left: 0px;
+  padding-left: 0;
+  /* column-width: 213px; */
+  column-count: 2;
+  /* max-width: 3013px; */
+  /* display: flex; */
+  list-style: none;
+  max-height: -3vh;
+  /* max-height: 238px; */
+  /* flex-direction: column; */
+  /* width: 330px; */
+  max-width: 400px;
 }
+
 ul div {
   margin-bottom: 4px;
   display: flex;
@@ -240,7 +251,6 @@ label {
   margin-bottom: 30px;
   width: -moz-fit-content;
   width: fit-content;
-  max-width: 200px;
   min-width: 130px;
 }
 
@@ -362,34 +372,36 @@ label {
 
 .IdForm2 {
   background: white;
-  border: 2px solid rgba(12, 16, 64, 0.606);
+  border: 1px solid rgb(121 123 163 / 61%);
   margin: 4px;
   padding: 6px;
   box-shadow: 1px 1px 2px #a3a0a0;
   width: 168px;
-  height: 20px;
+  height: 13px;
   border-radius: 4px;
   overflow: auto;
 }
 
 .ValueForm2 {
   background: white;
-  border: 2px solid rgba(12, 16, 64, 0.606);
+  /* border: 1px solid rgba(12, 16, 64, 0.606); */
   margin-left: 5px;
   padding: 6px;
   box-shadow: 1px 1px 2px #a3a0a0;
   width: 30%;
-  height: 20px;
+  height: 15px;
   border-radius: 4px;
+  border: 1px solid rgb(143 147 196 / 61%);
 }
 
 .selectedOperator2 {
   background: white;
-  border: 2px solid rgba(12, 16, 64, 0.606);
+  border: 1px solid rgb(143 147 196 / 61%);
+  /* border: 1px solid rgba(12, 16, 64, 0.606); */
   font-size: medium;
   border-radius: 4px;
   width: 43px;
-  height: 34px;
+  height: 27px;
   margin-right: 20px;
   box-shadow: 1px 2px 2px #cecece;
 }
@@ -489,18 +501,5 @@ label {
     margin-right: 20px;
     margin-top: 30px;
     margin-bottom: -17px;
-  }
-  .inputSearch{
-    width: 28vw;
-    height: -moz-fit-content;
-    height: fit-content;
-    padding: 10px;
-    font-size: 14 px;
-    border: 1px solid #c4c4c4;
-    box-shadow: chocolate;
-    box-shadow: 1px 1px 4px 0px #e9e9e9;
-    text-overflow: clip;
-    max-width: 69vw;
-    height: 20vh !important;
   }
 }
