--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -20,6 +20,31 @@
   border: solid #2269bf;
 }
 
+.filterIcon {
+  height: 20px;
+}
+
+.buttonAllFilters {
+  display: flex;
+  border: 1px solid #3176b1;
+  padding: 12px;
+  border-radius: 27px;
+  margin-left: 6vw;
+
+  margin-bottom: 10px;
+}
+
+.buttonAllFilters h4 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  color: #3176b1;
+  margin-left: 3px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-weight: 600;
+}
+
 .formInput {
   display: flex;
   align-items: center;
@@ -70,6 +95,10 @@ p {
   flex-direction: column;
 }
 
+.label-ontology-div label {
+  min-width: 100px;
+  margin-left: 0px;
+}
 .inputSearch {
   width: 36vw;
   height: fit-content;
@@ -84,11 +113,13 @@ p {
 }
 
 .filterTermsContainer {
+  margin-bottom: 13px;
   display: flex;
   width: 95vw;
   justify-content: space-evenly;
-  margin-bottom: 18px;
+  /* margin-bottom: 18px; */
   flex-wrap: wrap;
+  height: fit-content;
   margin-left: -10px;
 }
 .filterTermsContainer2 {
@@ -274,6 +305,7 @@ label {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  margin-top: 2px;
 }
 .onHover {
   display: none;
@@ -281,8 +313,20 @@ label {
 
 .label:hover + .onHover {
   display: block;
-  color: #2fa458;
+  color: #fff;
+  z-index: 4;
   font-weight: 500;
+  margin-top: -20px;
+  background: #6e9ef0;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 2px;
+  padding-left: 2px;
+  display: flex;
+  border-radius: 2px;
+  font-size: 11.5px;
+  align-content: center;
+  justify-content: center;
 }
 .deleteIcon ion-icon {
   color: black;
