--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -4,27 +4,25 @@
 
 /* Apply custom scrollbar styles to the table container */
 .table-container {
- 
-    overflow-x: auto;
-    width: 100%;
-    height: 90vh;
-    position: relative;
-    min-width: 1000px;
-    overflow-y: scroll;
-    overflow-x: scroll;
-    display: flex;
-    /* min-width: 950px; */
-    flex-direction: column;
-    scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
+  overflow-x: auto;
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  min-width: 1000px;
+  overflow-y: scroll;
+  overflow-x: scroll;
+  display: flex;
+  /* min-width: 950px; */
+  flex-direction: column;
+  scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
 }
-
 
 .table-container th.hidden,
 .table-container td.hidden {
   display: none;
 }
 
-thead{
+thead {
   border-bottom: 0px !important;
 }
 .menu-icon-container {
@@ -126,7 +124,6 @@ li svg {
 
 .body-container {
   overflow-y: auto;
-  max-height: 100vh;
 }
 
 .tableResults {
@@ -135,7 +132,6 @@ li svg {
   table-layout: fixed; /* Fixed layout to ensure equal column widths */
   margin-left: 14px;
 }
-
 
 .sticky-header input {
   width: 80%;
@@ -148,18 +144,79 @@ li svg {
   white-space: break-spaces;
   width: 86vw;
   overflow-x: scroll;
-  height: 104px;
+  height: 60px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   font-family: sans-serif;
 }
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.pagination-controls button {
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  padding: 5px 10px;
+  margin: 0 2px;
+  cursor: pointer;
+  border-radius: 2px;
+}
+input[type='checkbox'] {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  outline: none;
+  content: none;
+}
+input[type='checkbox']:checked:before {
+  display: flex;
+  color: rgb(36, 43, 106) !important;
+  align-items: center;
+  justify-content: center;
+}
+
+input[type='checkbox']:before {
+  content: '✓';
+  font-size: 15px;
+  color: transparent !important;
+  background: #ffffff;
+  display: block;
+  width: 11px;
+  height: 11px;
+  border: 1.8px solid #3176b1;
+  margin-right: 1px;
+  margin-bottom: 7px;
+}
+
+.divFilter p {
+  color: #3176b1;
+}
+.pagination-controls button.active {
+  background-color: #3d72a6;
+  color: white;
+  border-radius: 2px;
+}
+
+.pagination-controls button:disabled {
+  cursor: not-allowed;
+  background-color: #dddddd;
+  border-radius: 2px;
+}
+
+.pagination-controls button:hover:not(.active):not(:disabled) {
+  background-color: #ddd;
+}
 
 th.sticky-header {
   position: sticky;
   top: 0;
-  background-color: white; /* Ensure background color appears */
-  z-index: 3; /* Ensure the sticky header appears above the tbody */
+  background-color: white;
+  z-index: 3;
+  display: flex;
+  align-items: center;
 }
 
 th {
@@ -211,7 +268,7 @@ td {
   color: #fce8e8;
   font-weight: 600;
   background: #e93e3e;
-  width: fit-content; 
+  width: fit-content;
 }
 
 .foundResult:hover {
