--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -30,8 +30,8 @@
   padding: 12px;
   border-radius: 27px;
   margin-left: 6vw;
-
   margin-bottom: 10px;
+  align-items: center;
 }
 
 .buttonAllFilters h4 {
@@ -64,10 +64,9 @@ h14 {
 }
 
 .moduleAddedVariant2 h4 {
-  font-size: 12px;
-  color: rgba(12, 16, 64, 0.606);
-  margin-left: 10px;
-  margin-top: 6px;
+  font-size: 14px !important;
+  color: #2a6169;
+  width: 90%;
 }
 
 p {
@@ -305,7 +304,6 @@ label {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-top: 2px;
 }
 .onHover {
   display: none;
@@ -416,12 +414,12 @@ label {
 
 .IdForm2 {
   background: white;
-  border: 1px solid rgb(121 123 163 / 61%);
+  border: 1px solid rgb(143 147 196 / 61%);
   margin: 4px;
   padding: 6px;
-  box-shadow: 1px 1px 2px #a3a0a0;
+  box-shadow: 1px 1px 2px #eee9e9;
   width: 168px;
-  height: 13px;
+  height: 12px;
   border-radius: 4px;
   overflow: auto;
 }
@@ -431,9 +429,9 @@ label {
   /* border: 1px solid rgba(12, 16, 64, 0.606); */
   margin-left: 5px;
   padding: 6px;
-  box-shadow: 1px 1px 2px #a3a0a0;
+  box-shadow: 1px 1px 2px #eee9e9;
   width: 30%;
-  height: 15px;
+  height: 13px;
   border-radius: 4px;
   border: 1px solid rgb(143 147 196 / 61%);
 }
@@ -445,9 +443,9 @@ label {
   font-size: medium;
   border-radius: 4px;
   width: 43px;
-  height: 27px;
+  height: 26px;
   margin-right: 20px;
-  box-shadow: 1px 2px 2px #cecece;
+  box-shadow: 1px 1px 2px #eee9e9;
 }
 
 .selectModule1 {
