--- a/frontend/src/components/Individuals/Individuals.css
+++ b/frontend/src/components/Individuals/Individuals.css
@@ -89,11 +89,10 @@ h1 {
 }
 
 h2 {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  color: rgba(12, 16, 64, 0.606);
-  font-size: 13px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  /* color: rgba(12, 16, 64, 0.606); */
+  font-size: 12px;
+  color: #2a6169;
 }
 
 h3 {
