multiple response for different datasets working

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -85,7 +85,7 @@ html {
 .version {
   margin-right: 37px;
   margin-top: -18px;
-  color: rgb(102 116 152) !important;
+  color: #3176b1 !important;
   font-weight: 700 !important;
 }
 
@@ -1441,7 +1441,7 @@ h5 {
     margin-bottom: 0px;
     margin-right: 37px;
     margin-top: -18px;
-    color: rgb(102 116 152) !important;
+    color: #3176b1 !important;
     font-weight: 700 !important;
   }
 
