--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -34,6 +34,11 @@
   align-items: center;
 }
 
+.buttonAllFilters:hover{
+  border: 2.4px solid #4883b8;
+  margin-bottom: 8px;
+}
+
 .buttonAllFilters h4 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
