--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -6,7 +6,7 @@
 .table-container {
   overflow-x: auto;
   width: 100%;
-  height: 90vh;
+  height: fit-content;
   position: relative;
   min-width: 1000px;
   overflow-y: scroll;
@@ -110,6 +110,22 @@ li svg {
   align-items: flex-end;
   padding-left: 2px;
   padding-right: 2px;
+}
+
+.crossQButtonTable{
+  text-decoration: underline;
+  text-underline-offset: 2px;
+  color: #3176B1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.crossQsymbol{
+  width: 14px;
+  /* margin-left: 7px; */
+  align-items: center;
+  margin-left: 82%;
 }
 
 /* Customize the scrollbar track */
